tests/golden/type_errors/array_filter_generic_callback.cd
fun keep<T>(value: T): bool {
  return true;
}
filter([1], keep);
