tests/golden/type_errors/array_filter_generic_callback.err
Type error at 4:17: filter expects a non-generic callback
  filter([1], keep);
                  ^
